# Storm

./: .gitignore  README.md  meson.build
build-aux/flatpak/: io.github.Storm.json
data/: io.github.Storm.desktop.in  io.github.Storm.gresource.xml  io.github.Storm.gschema.xml  io.github.Storm.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: battle-view.blp  board-view.blp  board.blp  cell.blp  field-view.blp  field.blp  game-board.blp  game-page.blp  game-setup-page.blp  list-row.blp  main-menu-view.blp  map.blp  room-page.blp  ship-placement-view.blp  window-view.blp  window.blp
po/: POTFILES  meson.build
src/: application.vala  cell.vala  client-handler.vala  game-board.vala  game-page.vala  game-setup-page.vala  grid.vala  list-row.vala  main.vala  meson.build  player-parameters.vala  player-role.vala  player.vala  point.vala  server.vala  storm.gresource.xml  window.ui  window.vala
src/client/: application.vala  board.vala  cell.vala  entry-row.vala  field.vala  game-board.vala  game-page.vala  game-setup-page.vala  game.vala  list-row.vala  main-window.vala  map.vala  player.vala  point.vala  room-page.vala  room.vala  window.vala
src/client/enum/: connection-flag.vala  field-flag.vala  player-flag.vala
src/client/interface/: i-board-service.vala  i-navigation-service.vala
src/client/model/: board-model.vala  client-model.vala  game-model.vala  main-menu-model.vala  player-model.vala  ship-placement-model.vala
src/client/view/: battle-view.vala  board-view.vala  field-view.vala  main-menu-view.vala  ship-placement-view.vala  window-view.vala
src/client/view-model/: board-view-model.vala  field-view-model.vala  main-menu-view-model.vala  ship-placement-view-model.vala
src/server/: client-handler.vala  game-handler.vala  main-server.vala  player-array-list.vala  player-handler.vala  player.vala  room-handler.vala  room.vala  server.vala
